--- a/orchestration/docker-compose.yaml
+++ b/orchestration/docker-compose.yaml
@@ -90,6 +90,7 @@ services:
             tmpDir:
               path: /tmp/kestra-wd/tmp
           url: http://localhost:8080/
+    env_file: .env_encoded
     ports:
       - "8080:8080"
       - "8081:8081"
